# helion

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: _utils.py  bench_adamw.py  bench_add.py  bench_add_relu.py  bench_cross_entropy.py  bench_dropout.py  bench_gelu.py  bench_layernorm.py  bench_linear_cross_entropy.py  bench_matmul.py  bench_relu.py  bench_rmsnorm.py  bench_rope.py  bench_sgd.py  bench_softmax.py  bench_swiglu.py  run_all.py
benchmarks/results/: rtx3090.md
examples/: README.md  common.py  evaluate_checkpoint.py  generate_from_checkpoint.py  inference_cached.py  modules_quickstart.py  train_compare.py  train_reference.py  train_shakespeare.py  tritium_ops.py
examples/helion/: train_shakespeare.py
examples/tritium/: _model.py  train_compare.py  train_reference.py
helion/: __init__.py  amp.py  checkpoint.py  ema.py  nn.py  optim.py  state.py  training.py
tests/: _utils.py  conftest.py
tests/helion/: test_amp.py  test_checkpoint.py  test_ema.py  test_nn.py  test_optim.py  test_state.py  test_training.py
tests/tritium/: test_adamw.py  test_add.py  test_add_relu.py  test_attention.py  test_cross_entropy.py  test_dropout.py  test_gelu.py  test_layernorm.py  test_matmul.py  test_relu.py  test_rmsnorm.py  test_rope.py  test_sgd.py  test_softmax.py  test_swiglu.py
tritium/: __init__.py  _compat.py
tritium/ops/: __init__.py  _utils.py  adamw.py  add.py  add_relu.py  attention.py  cross_entropy.py  dropout.py  gelu.py  layernorm.py  matmul.py  relu.py  rmsnorm.py  rope.py  sgd.py  softmax.py  (+1 more)
